fixed versions in composer.json

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=8.0.0",
-        "booosta/webapp": "dev-master",
-        "booosta/privileges": "dev-master",
-        "booosta/genericuser": "dev-master"
+        "booosta/webapp": "^4.0",
+        "booosta/privileges": "^4.0",
+        "booosta/genericuser": "^4.0"
     }
 }
